# file2link

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose-telegram-api.yml  docker-compose.yml
.github/workflows/: docker.yml  rust.yml
bot/: Cargo.toml
bot/src/: bot.rs  lib.rs  process_message.rs  queue.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs  utils.rs
core/: Cargo.toml
core/src/: chat_config.rs  config.rs  utils.rs
nginx/: default.conf
shared/: Cargo.toml
shared/src/: chat_config.rs  cli_utils.rs  config.rs  lib.rs
src/: bot.rs  chat_config.rs  cli.rs  main.rs  server.rs  utils.rs
src/cli/: cli.rs  mod.rs
src/config/: mod.rs
