[package]
name = "file2link"
version = "0.1.1"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1.38.0", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.11.10", features = ["json"] }
uuid = "1.9.1"
http = "1.1.0"
serde_json = "1.0.118"
axum = "0.7.5"
mime_guess = "2.0.4"
serde = { version = "1.0.203", features = ["derive"] }
futures = "0.3.30"
libc = "0.2.155"
structopt = "0.3.26"
tokio-util = "0.7.11"
once_cell = "1.19.0"

[[bin]]
name = "f2l-cli"
path = "src/cli/cli.rs"
