[package]
name = "file2link"
version = "0.1.2"
edition = "2021"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1.38.0", features = ["full"] }
http = "1.1.0"
axum = "0.7.5"
mime_guess = "2.0.4"
cli = { path = "cli" }
core = { path = "core" }
bot = { path = "bot" }

[dev-dependencies]
assert_cmd = "2.0.8"
serial_test = "3.1.1"

[[bin]]
name = "f2l-cli"
path = "cli/src/main.rs"
