[package]
name = "file2link"
version = "0.1.2"
edition = "2021"

[workspace]
members = [
    "cli",
]

[dependencies]
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1.38.0", features = ["full"] }
http = "1.1.0"
axum = "0.7.5"
mime_guess = "2.0.4"
#structopt = "0.3.26"
cli = { path = "cli" }
shared = { path = "shared" }
bot = { path = "bot" }
