[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
teloxide = { version = "0.12", features = ["full"] }
pretty_env_logger = "0.5.0"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.11.10", features = ["json"] }
nanoid = "0.4.0"
futures = "0.3.30"
tokio-util = "0.7.11"
regex = "1.10.5"
cli = { path = "../cli" }
shared = { path = "../shared" }

[dev-dependencies]
assert_cmd = "2.0.8"
serial_test = "3.1.1"
