[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "f2l-cli"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4.22"
structopt = "0.3.26"
tokio = { version = "1.38.0", features = ["full"] }
shared = { path = "../shared" }
pretty_env_logger = "0.5.0"
nanoid = "0.4.0"

[dev-dependencies]
assert_cmd = "2.0.8"
serial_test = "3.1.1"
